--- a/src/Pages/Main/Main.scss
+++ b/src/Pages/Main/Main.scss
@@ -10,6 +10,10 @@
     margin: 3rem 0;
   }
 
+  &_description {
+    margin-bottom: 3rem;
+  }
+
   &_field {
     width: 12rem;
     height: 12rem;
